# nBodySim

./: .gitignore  CMakeLists.txt  README.md  Session.vim  a.out  particles.cpp  particles.hpp  plot.py  solver.hpp  test.cpp  vec3.hpp  vec3.hpp.gch
examples/: solar_system.txt
include/: particles.hpp  solver.hpp
src/: particles.cpp  solver.cpp  test.cpp
